fix style, on  vertical aligning table cell

--- a/src/components/filters/search/Search.pcss
+++ b/src/components/filters/search/Search.pcss
@@ -2,7 +2,8 @@
   margin-bottom: 20px;
   padding: 14px 10px 14px 30px;
   box-sizing: border-box;
-  width: 390px;
+  width: 100%;
+  min-width: var(--tableWidth);
   height: 50px;
   border: 1px solid #EFEFEF;
   border-radius: 3px;
